:sparkles: [#69] added owner field in the  publication api endpoint, and added filter to filter on the owners idenifier
