# src/woo_publications/api/openapi.yaml
@@ -583,6 +583,11 @@ paths:
 
           The display name of the user performing the action, to make them recognizable.
         required: true
+      - in: query
+        name: eigenaar
+        schema:
+          type: string
+        description: Filter publications based on the owner identifier of the object.
       - name: page
         required: false
         in: query
@@ -1128,6 +1133,22 @@ components:
       - publicatie
       - registratiedatum
       - uuid
+    Eigenaar:
+      type: object
+      properties:
+        displayName:
+          type: string
+          readOnly: true
+          description: obtained from the audit trail request headers, extracted from
+            the audit trails/log entries.
+        identifier:
+          type: string
+          readOnly: true
+          description: arbitrary, unique-ish string. Could be a `sub` claim from OIDC,
+            but for our perspective this data has no 'meaning'.
+      required:
+      - displayName
+      - identifier
     InformationCategory:
       type: object
       properties:
@@ -1392,6 +1413,11 @@ components:
           maxLength: 255
         omschrijving:
           type: string
+        eigenaar:
+          allOf:
+          - $ref: '#/components/schemas/Eigenaar'
+          readOnly: true
+          description: De eigenaar van de publicatie.
         registratiedatum:
           type: string
           format: date-time
@@ -1416,6 +1442,11 @@ components:
           maxLength: 255
         omschrijving:
           type: string
+        eigenaar:
+          allOf:
+          - $ref: '#/components/schemas/Eigenaar'
+          readOnly: true
+          description: De eigenaar van de publicatie.
         registratiedatum:
           type: string
           format: date-time
@@ -1425,6 +1456,7 @@ components:
             opgeslagen is. Niet te verwarren met de creatiedatum van de publicatie,
             die typisch *voor* de registratiedatum valt.
       required:
+      - eigenaar
       - officieleTitel
       - registratiedatum
       - uuid
