# src/woo_publications/publications/api/serializer.py
@@ -1,6 +1,10 @@
 from django.utils.translation import gettext_lazy as _
 
+from drf_spectacular.utils import extend_schema_field
 from rest_framework import serializers
+
+from woo_publications.logging.constants import Events
+from woo_publications.logging.models import TimelineLogProxy
 
 from ..models import Document, Publication
 
@@ -29,7 +33,26 @@ class DocumentSerializer(serializers.ModelSerializer):
         )
 
 
+class EigenaarSerializer(serializers.Serializer):
+    display_name = serializers.CharField(
+        read_only=True,
+        help_text=_(
+            "obtained from the audit trail request headers, extracted from the audit trails/log entries."
+        ),
+    )
+    identifier = serializers.CharField(
+        read_only=True,
+        help_text=_(
+            "arbitrary, unique-ish string. Could be a `sub` claim from OIDC, but for our perspective this data has no 'meaning'."
+        ),
+    )
+
+
 class PublicationSerializer(serializers.ModelSerializer):
+    eigenaar = serializers.SerializerMethodField(
+        help_text=_("De eigenaar van de publicatie."), method_name="get_acting_user"
+    )
+
     class Meta:  # type: ignore
         model = Publication
         fields = (
@@ -37,6 +60,7 @@ class PublicationSerializer(serializers.ModelSerializer):
             "officiele_titel",
             "verkorte_titel",
             "omschrijving",
+            "eigenaar",
             "registratiedatum",
         )
         extra_kwargs = {
@@ -47,3 +71,14 @@ class PublicationSerializer(serializers.ModelSerializer):
                 "read_only": True,
             },
         }
+
+    @extend_schema_field(EigenaarSerializer(many=False))
+    def get_acting_user(self, obj):
+        try:
+            log = TimelineLogProxy.objects.for_object(obj).get(  # type: ignore reportAttributeAccessIssue
+                extra_data__event=Events.create
+            )
+        except TimelineLogProxy.DoesNotExist:
+            return {}
+
+        return EigenaarSerializer(log.acting_user[0], context=self.context).data
